# inner-nerd

./: .gitignore  001-genesis.py  002-animations-1.py  002-recursion-1.py  003-recursion-1.py  004-jin-jang.py  README.md  pyproject.toml  render_unbalanced_wheel.sh
cell_automata/: __init__.py  gol.py
geometry/: utils.py
lagrangian_mechanics/: 001_pendulum.py  002_unbalanced_wheel.py
lagrangian_mechanics/solver/: ode_solver.py
lagrangian_mechanics/unbalanced_wheel/: __init__.py  geometry.py  main.py  params.py  simulation.py
primitives/: __init__.py  center_of_mass.py  latex.py  segmented_wheel.py
sacral-geometry/: 001-jin-jang.py  002-three-circles.py
sacral_geometry/: 002-three-circles.py  block_spiral.py  circles_intersection.py  curved_triangle.py  glow.py  scene_utils.py
